[gd_scene load_steps=14 format=2]

[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Door.gd" type="Script" id=2]
[ext_resource path="res://Assets/Door.png" type="Texture" id=3]
[ext_resource path="res://Enemies/C_Spider.tscn" type="PackedScene" id=4]
[ext_resource path="res://Enemies/Enemies.gd" type="Script" id=5]
[ext_resource path="res://UI/Camera.gd" type="Script" id=6]
[ext_resource path="res://Combat/Combat.gd" type="Script" id=7]
[ext_resource path="res://Player/C_Player.gd" type="Script" id=8]
[ext_resource path="res://Levels/Tileset.tres" type="TileSet" id=9]
[ext_resource path="res://UI/Pause_Menu.tscn" type="PackedScene" id=10]
[ext_resource path="res://Assets/Music_Sounds/Untitled_score.mp3" type="AudioStream" id=11]
[ext_resource path="res://UI/UI.tscn" type="PackedScene" id=12]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 17.5, 30.5 )

[node name="Game" type="Node2D"]

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 2000.0
margin_bottom = 1000.0
color = Color( 0.0235294, 0.0196078, 0.117647, 1 )

[node name="Background" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
format = 1
tile_data = PoolIntArray( 65537, 4, 0, 65538, 4, 0, 131073, 4, 0, 131074, 4, 0, 131084, 4, 0, 131085, 4, 0, 131086, 4, 0, 131087, 4, 0, 196609, 4, 0, 196610, 4, 0, 196611, 4, 0, 196612, 4, 0, 196613, 4, 0, 196614, 4, 0, 196615, 4, 0, 196616, 4, 0, 196617, 4, 0, 196618, 4, 0, 196619, 4, 0, 196620, 4, 0, 196621, 4, 0, 196622, 4, 0, 196623, 4, 0, 196624, 4, 0, 196625, 4, 0, 196626, 4, 0, 196627, 4, 0, 196628, 4, 0, 196629, 4, 0, 196630, 4, 0, 196631, 4, 0, 262145, 4, 0, 262146, 4, 0, 262147, 4, 0, 262148, 4, 0, 262149, 4, 0, 262150, 4, 0, 262151, 4, 0, 262152, 4, 0, 262153, 4, 0, 262154, 4, 0, 262155, 4, 0, 262156, 4, 0, 262157, 4, 0, 262158, 4, 0, 262159, 4, 0, 262160, 4, 0, 262161, 4, 0, 262162, 4, 0, 262163, 4, 0, 262164, 4, 0, 262165, 4, 0, 262166, 4, 0, 262167, 4, 0, 327681, 4, 0, 327682, 4, 0, 327683, 4, 0, 327684, 4, 0, 327685, 4, 0, 327686, 4, 0, 327687, 4, 0, 327688, 4, 0, 327689, 4, 0, 327690, 4, 0, 327691, 4, 0, 393217, 4, 0, 393218, 4, 0, 393219, 4, 0, 393220, 4, 0, 393221, 4, 0, 393222, 4, 0, 458753, 4, 0, 458754, 4, 0, 458755, 4, 0, 458756, 4, 0, 458757, 4, 0, 458758, 4, 0, 458759, 4, 0, 524289, 4, 0, 524290, 4, 0, 524291, 4, 0, 524292, 4, 0, 524293, 4, 0, 524294, 4, 0 )

[node name="LevelMap" type="TileMap" parent="."]
tile_set = ExtResource( 9 )
collision_layer = 3
collision_mask = 3
format = 1
tile_data = PoolIntArray( 0, 7, 0, 1, 7, 0, 2, 7, 0, 3, 7, 0, 4, 7, 0, 5, 7, 0, 6, 7, 0, 7, 7, 0, 8, 7, 0, 9, 7, 0, 10, 7, 0, 11, 7, 0, 12, 7, 0, 13, 7, 0, 14, 7, 0, 15, 7, 0, 16, 7, 0, 17, 7, 0, 18, 7, 0, 19, 7, 0, 20, 7, 0, 21, 7, 0, 22, 7, 0, 23, 7, 0, 24, 7, 0, 25, 7, 0, 26, 7, 0, 27, 7, 0, 28, 7, 0, 29, 7, 0, 30, 7, 0, 31, 7, 0, 32, 0, 0, 33, 0, 0, 34, 0, 0, 35, 0, 0, 65536, 8, 0, 65539, 4, 0, 65540, 6, 0, 65541, 7, 0, 65542, 7, 0, 65543, 7, 0, 65544, 7, 0, 65545, 7, 0, 65546, 7, 0, 65547, 7, 0, 65548, 7, 0, 65549, 7, 0, 65550, 7, 0, 65551, 7, 0, 65552, 7, 0, 65553, 7, 0, 65554, 7, 0, 65555, 7, 0, 65556, 7, 0, 65557, 7, 0, 65558, 7, 0, 65559, 7, 0, 65560, 7, 0, 65561, 7, 0, 65562, 7, 0, 65563, 7, 0, 65564, 7, 0, 65565, 7, 0, 65566, 7, 0, 65567, 7, 0, 65568, 0, 0, 65569, 0, 0, 65570, 0, 0, 65571, 0, 0, 131072, 8, 0, 131075, 4, 0, 131076, 6, 0, 131077, 7, 0, 131078, 7, 0, 131079, 7, 0, 131080, 7, 0, 131081, 7, 0, 131082, 7, 0, 131083, 7, 0, 131084, 7, 0, 131085, 8, 0, 131088, 6, 0, 131089, 7, 0, 131090, 7, 0, 131091, 7, 0, 131092, 7, 0, 131093, 7, 0, 131094, 7, 0, 131095, 7, 0, 131096, 7, 0, 131097, 7, 0, 131098, 7, 0, 131099, 7, 0, 131100, 7, 0, 131101, 7, 0, 131102, 7, 0, 131103, 7, 0, 131104, 7, 0, 131105, 7, 0, 131106, 0, 0, 131107, 0, 0, 196608, 8, 0, 196631, 6, 0, 196632, 7, 0, 196633, 7, 0, 196634, 7, 0, 196635, 7, 0, 196636, 7, 0, 196637, 7, 0, 196638, 7, 0, 196639, 7, 0, 196640, 7, 0, 196641, 7, 0, 196642, 1, 0, 196643, 0, 0, 262144, 8, 0, 262167, 6, 0, 262168, 7, 0, 262169, 7, 0, 262170, 7, 0, 262171, 7, 0, 262172, 7, 0, 262173, 7, 0, 262174, 7, 0, 262175, 7, 0, 262176, 7, 0, 262177, 7, 0, 262178, 1, 0, 262179, 0, 0, 327680, 8, 0, 327686, 6, 0, 327687, 7, 0, 327688, 8, 0, 327691, 6, 0, 327692, 7, 0, 327693, 7, 0, 327694, 7, 0, 327695, 7, 0, 327696, 7, 0, 327697, 7, 0, 327698, 7, 0, 327699, 7, 0, 327700, 7, 0, 327701, 7, 0, 327702, 7, 0, 327703, 7, 0, 327704, 7, 0, 327705, 7, 0, 327706, 7, 0, 327707, 7, 0, 327708, 7, 0, 327709, 7, 0, 327710, 7, 0, 327711, 7, 0, 327712, 7, 0, 327713, 0, 0, 327714, 0, 0, 327715, 0, 0, 393216, 8, 0, 393222, 6, 0, 393223, 7, 0, 393224, 7, 0, 393225, 7, 0, 393226, 7, 0, 393227, 7, 0, 393228, 7, 0, 393229, 7, 0, 393230, 7, 0, 393231, 7, 0, 393232, 7, 0, 393233, 7, 0, 393234, 7, 0, 393235, 7, 0, 393236, 7, 0, 393237, 7, 0, 393238, 7, 0, 393239, 7, 0, 393240, 7, 0, 393241, 7, 0, 393242, 7, 0, 393243, 7, 0, 393244, 7, 0, 393245, 7, 0, 393246, 7, 0, 393247, 7, 0, 393248, 7, 0, 393249, 0, 0, 393250, 0, 0, 393251, 0, 0, 393252, 0, 0, 458752, 8, 0, 458758, 6, 0, 458759, 7, 0, 458760, 7, 0, 458761, 7, 0, 458762, 7, 0, 458763, 7, 0, 458764, 7, 0, 458765, 7, 0, 458766, 7, 0, 458767, 7, 0, 458768, 7, 0, 458769, 7, 0, 458770, 7, 0, 458771, 7, 0, 458772, 7, 0, 458773, 7, 0, 458774, 7, 0, 458775, 7, 0, 458776, 7, 0, 458777, 7, 0, 458778, 7, 0, 458779, 7, 0, 458780, 7, 0, 458781, 7, 0, 458782, 7, 0, 458783, 7, 0, 458784, 7, 0, 458785, 0, 0, 458786, 0, 0, 458787, 0, 0, 458788, 0, 0, 458789, 0, 0, 524288, 8, 0, 524294, 6, 0, 524295, 7, 0, 524296, 7, 0, 524297, 7, 0, 524298, 7, 0, 524299, 7, 0, 524300, 7, 0, 524301, 7, 0, 524302, 7, 0, 524303, 7, 0, 524304, 7, 0, 524305, 7, 0, 524306, 7, 0, 524307, 7, 0, 524308, 7, 0, 524309, 7, 0, 524310, 7, 0, 524311, 7, 0, 524312, 7, 0, 524313, 7, 0, 524314, 7, 0, 524315, 7, 0, 524316, 7, 0, 524317, 7, 0, 524318, 7, 0, 524319, 7, 0, 524320, 7, 0, 524321, 0, 0, 524322, 0, 0, 524323, 0, 0, 524324, 0, 0, 524325, 0, 0, 589824, 7, 0, 589825, 7, 0, 589826, 7, 0, 589827, 7, 0, 589828, 7, 0, 589829, 7, 0, 589830, 7, 0, 589831, 7, 0, 589832, 7, 0, 589833, 7, 0, 589834, 7, 0, 589835, 7, 0, 589836, 7, 0, 589837, 7, 0, 589838, 7, 0, 589839, 7, 0, 589840, 7, 0, 589841, 7, 0, 589842, 7, 0, 589843, 7, 0, 589844, 7, 0, 589845, 7, 0, 589846, 7, 0, 589847, 7, 0, 589848, 7, 0, 589849, 7, 0, 589850, 7, 0, 589851, 7, 0, 589852, 7, 0, 589853, 7, 0, 589854, 7, 0, 589855, 7, 0, 589856, 7, 0, 589857, 0, 0, 589858, 0, 0, 589859, 0, 0, 589860, 0, 0, 655360, 7, 0, 655361, 7, 0, 655362, 7, 0, 655363, 7, 0, 655364, 7, 0, 655365, 7, 0, 655366, 7, 0, 655367, 7, 0, 655368, 7, 0, 655369, 7, 0, 655370, 7, 0, 655371, 7, 0, 655372, 7, 0, 655373, 7, 0, 655374, 7, 0, 655375, 7, 0, 655376, 7, 0, 655377, 7, 0, 655378, 7, 0, 655379, 7, 0, 655380, 7, 0, 655381, 7, 0, 655382, 7, 0, 655383, 7, 0, 655384, 7, 0, 655385, 7, 0, 655386, 7, 0, 655387, 7, 0, 655388, 7, 0, 655389, 7, 0, 655390, 7, 0, 655391, 7, 0, 655392, 7, 0, 655394, 0, 0, 655395, 0, 0, 786431, 0, 0, 720896, 7, 0, 720897, 7, 0, 720898, 7, 0, 720899, 7, 0, 720900, 7, 0, 720901, 7, 0, 720902, 7, 0, 720903, 7, 0, 720904, 7, 0, 720905, 7, 0, 720906, 7, 0, 720907, 7, 0, 720908, 7, 0, 720909, 7, 0, 720910, 7, 0, 720911, 7, 0, 720912, 7, 0, 720913, 7, 0, 720914, 7, 0, 720915, 7, 0, 720916, 7, 0, 720917, 7, 0, 720918, 7, 0, 720919, 7, 0, 720920, 7, 0, 720921, 7, 0, 720922, 7, 0, 720923, 7, 0, 720924, 7, 0, 720925, 7, 0, 720926, 7, 0, 720927, 7, 0, 720928, 7, 0, 851967, 0, 0, 786432, 7, 0, 786433, 7, 0, 786434, 7, 0, 786435, 7, 0, 786436, 7, 0, 786437, 7, 0, 786438, 7, 0, 786439, 7, 0, 786440, 7, 0, 786441, 7, 0, 786442, 7, 0, 786443, 7, 0, 786444, 7, 0, 786445, 7, 0, 786446, 7, 0, 786447, 7, 0, 786448, 7, 0, 786449, 7, 0, 786450, 7, 0, 786451, 7, 0, 786452, 7, 0, 786453, 7, 0, 786454, 7, 0, 786455, 7, 0, 786456, 7, 0, 786457, 7, 0, 786458, 7, 0, 786459, 7, 0, 786460, 7, 0, 786461, 7, 0, 786462, 7, 0, 786463, 7, 0, 786464, 7, 0, 851968, 7, 0, 851969, 7, 0, 851970, 7, 0, 851971, 7, 0, 851972, 7, 0, 851973, 7, 0, 851974, 7, 0, 851975, 7, 0, 851976, 7, 0, 851977, 7, 0, 851978, 7, 0, 851979, 7, 0, 851980, 7, 0, 851981, 7, 0, 851982, 7, 0, 851983, 7, 0, 851984, 7, 0, 851985, 7, 0, 851986, 7, 0, 851987, 7, 0, 851988, 7, 0, 851989, 7, 0, 851990, 7, 0, 851991, 7, 0, 851992, 7, 0, 851993, 7, 0, 851994, 7, 0, 851995, 7, 0, 851996, 7, 0, 851997, 7, 0, 851998, 7, 0, 851999, 7, 0, 917504, 7, 0, 917505, 7, 0, 917506, 7, 0, 917507, 7, 0, 917508, 7, 0, 917509, 7, 0, 917510, 7, 0, 917511, 7, 0, 917512, 7, 0, 917513, 7, 0, 917514, 7, 0, 917515, 7, 0, 917516, 7, 0, 917517, 7, 0, 917518, 7, 0, 917519, 7, 0, 917520, 7, 0, 917521, 7, 0, 917522, 7, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 7, 0, 917527, 7, 0, 917528, 7, 0, 917529, 7, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 983040, 7, 0, 983041, 7, 0, 983042, 7, 0, 983043, 7, 0, 983044, 7, 0, 983045, 7, 0, 983046, 7, 0, 983047, 7, 0, 983048, 7, 0, 983049, 7, 0, 983050, 7, 0, 983051, 7, 0, 983052, 7, 0, 983053, 7, 0, 983054, 7, 0, 983055, 7, 0, 983056, 7, 0, 983057, 7, 0, 983058, 7, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0, 983064, 0, 0, 983065, 0, 0, 983066, 0, 0, 983067, 0, 0, 983068, 0, 0, 983069, 0, 0, 983070, 0, 0, 1048581, 7, 0, 1048582, 7, 0, 1048583, 7, 0, 1048584, 7, 0, 1048585, 7, 0, 1048586, 7, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Enemies" type="Node2D" parent="."]
script = ExtResource( 5 )

[node name="Door_3_to_2" type="Area2D" parent="."]
position = Vector2( 322, 511 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Door_3_to_2"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_3_to_2"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Door_3_to_4" type="Area2D" parent="."]
position = Vector2( 1431, 241 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Door_3_to_4"]
texture = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Door_3_to_4"]
position = Vector2( 0.5, 0.5 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="Combat" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1024.0
margin_bottom = 600.0
script = ExtResource( 7 )

[node name="Background" type="ColorRect" parent="Combat"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0392157, 0.0392157, 0.392157, 1 )

[node name="Player_Action_Area" type="ColorRect" parent="Combat"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -768.0
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="Fight1" type="Button" parent="Combat/Player_Action_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -200.0
margin_right = 80.0
margin_bottom = -160.0
text = "Fight"

[node name="Defend1" type="Button" parent="Combat/Player_Action_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -130.0
margin_right = 80.0
margin_bottom = -90.0
text = "Defend"

[node name="Item1" type="Button" parent="Combat/Player_Action_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -60.0
margin_right = 80.0
margin_bottom = -20.0
text = "Item"

[node name="Info1" type="Button" parent="Combat/Player_Action_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 50.0
text = "Info"

[node name="Info_Wall" type="ColorRect" parent="Combat/Player_Action_Area"]
visible = false
margin_left = 30.0
margin_top = 80.0
margin_right = 230.0
margin_bottom = 290.0
color = Color( 0.196078, 0.196078, 0.196078, 1 )

[node name="Information" type="Label" parent="Combat/Player_Action_Area/Info_Wall"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -164.0
align = 1
valign = 1

[node name="Player_Fight_Area" type="ColorRect" parent="Combat"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -768.0
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="Attack_A" type="Button" parent="Combat/Player_Fight_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -200.0
margin_right = 80.0
margin_bottom = -160.0
text = "Critical Strike"

[node name="Attack_B" type="Button" parent="Combat/Player_Fight_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -130.0
margin_right = 80.0
margin_bottom = -90.0
text = "Reckless Strike"

[node name="Attack_C" type="Button" parent="Combat/Player_Fight_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -60.0
margin_right = 80.0
margin_bottom = -20.0
text = "Stunning Strike"

[node name="Back" type="Button" parent="Combat/Player_Fight_Area"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = 10.0
margin_right = 80.0
margin_bottom = 50.0
text = "Back"

[node name="C_Player_Container" type="Node2D" parent="Combat"]

[node name="C_Player" type="Sprite" parent="Combat/C_Player_Container"]
script = ExtResource( 8 )

[node name="C_Enemy_Container" type="Node2D" parent="Combat"]

[node name="C_Spider" parent="Combat/C_Enemy_Container" instance=ExtResource( 4 )]

[node name="ConfirmBlock" type="ColorRect" parent="Combat"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -60.0
margin_right = 150.0
margin_bottom = 60.0
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="ActionText" type="Label" parent="Combat/ConfirmBlock"]
anchor_right = 1.0
margin_bottom = 60.0
align = 1
valign = 1

[node name="Continue" type="Button" parent="Combat/ConfirmBlock"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -40.0
margin_right = 60.0
margin_bottom = -20.0
text = "Continue"

[node name="Blocker" type="ColorRect" parent="Combat/ConfirmBlock"]
margin_left = -327.0
margin_top = -162.0
margin_right = -131.0
margin_bottom = 137.0
color = Color( 0.392157, 0.392157, 0.392157, 1 )

[node name="UI" parent="." instance=ExtResource( 12 )]

[node name="Pause_Menu" parent="." instance=ExtResource( 10 )]
pause_mode = 2

[node name="Camera" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 0
script = ExtResource( 6 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true

[connection signal="body_entered" from="Door_3_to_2" to="Door_3_to_2" method="_on_Door_body_entered"]
[connection signal="body_entered" from="Door_3_to_4" to="Door_3_to_4" method="_on_Door_body_entered"]
[connection signal="pressed" from="Combat/Player_Action_Area/Fight1" to="Combat" method="_on_Fight1_pressed"]
[connection signal="pressed" from="Combat/Player_Action_Area/Defend1" to="Combat" method="_on_Defend1_pressed"]
[connection signal="pressed" from="Combat/Player_Action_Area/Item1" to="Combat" method="_on_Item1_pressed"]
[connection signal="pressed" from="Combat/Player_Action_Area/Info1" to="Combat" method="_on_Info1_pressed"]
[connection signal="pressed" from="Combat/Player_Fight_Area/Attack_A" to="Combat" method="_on_Attack_A_pressed"]
[connection signal="pressed" from="Combat/Player_Fight_Area/Attack_B" to="Combat" method="_on_Attack_B_pressed"]
[connection signal="pressed" from="Combat/Player_Fight_Area/Attack_C" to="Combat" method="_on_Attack_C_pressed"]
[connection signal="pressed" from="Combat/Player_Fight_Area/Back" to="Combat" method="_on_Back_pressed"]
[connection signal="pressed" from="Combat/ConfirmBlock/Continue" to="Combat" method="_on_Continue_pressed"]
